--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,4 +1,8 @@
 @import "../../node_modules/canvas-ui-system/canvas.less";
 
-/* Layout */
 @import "layout/foundation.less";
+
+@import "modules/navigation-bar.less";
+
+@import "variables/variables-layout.less";
+@import "variables/variables-typography.less";
