Create fixed bar content

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,5 +1,6 @@
 @import "../../node_modules/canvas-ui-system/canvas.less";
 
+@import "variables/variables-color.less";
 @import "variables/variables-layout.less";
 @import "variables/variables-typography.less";
 
