--- a/src/css/variables/variables-typography.less
+++ b/src/css/variables/variables-typography.less
@@ -1,3 +1,5 @@
+@font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
 @heading-h1-text-font-size: @heading-h2-text-font-size * 1.1;
 @heading-h2-text-font-size: @heading-h3-text-font-size * 1.1;
 @heading-h3-text-font-size: @heading-h4-text-font-size * 1.1;
