--- a/src/css/layout/foundation.less
+++ b/src/css/layout/foundation.less
@@ -5,10 +5,6 @@ html {
 .application-wrapper {
   flex: 1;
   flex-direction: column;
-
-  &.has-navigation-bar {
-    padding-top: @fixed-bar-height;
-  }
 }
 
 .fixed-bar {
@@ -21,4 +17,8 @@ html {
 
 .page-wrapper {
   flex: 1;
+
+  &.has-navigation-bar {
+    margin-top: @fixed-bar-height;
+  }
 }
