--- a/src/css/index.less
+++ b/src/css/index.less
@@ -5,5 +5,9 @@
 @import "variables/variables-typography.less";
 
 @import "layout/foundation.less";
+@import "layout/page.less";
+@import "layout/section-header.less";
+
+@import "components/icons.less";
 
 @import "modules/navigation-bar.less";
