Override canvas typography variables to match mockup

--- a/src/css/layout/section-header.less
+++ b/src/css/layout/section-header.less
@@ -1,4 +1,12 @@
+@section-header-margin-bottom: @base-spacing-unit * 1.5;
+@section-header-icon-margin-bottom: @base-spacing-unit * 2/3;
+
+.section-header {
+  margin-bottom: @section-header-margin-bottom;
+}
+
 .section-header-icon {
+  margin-bottom: @section-header-icon-margin-bottom;
 
   .icon {
     display: block;
