--- a/src/css/modules/navigation-bar.less
+++ b/src/css/modules/navigation-bar.less
@@ -1,4 +1,4 @@
-@navigation-item-font-size: @body-text-font-size;
+@navigation-item-font-size: @body-text-font-size * 1.15;
 @navigation-item-padding-vertical: @base-spacing-unit * 1/2;
 @navigation-item-padding-horizontal: @base-spacing-unit * 1/2;
 
