--- a/src/css/variables/variables-typography.less
+++ b/src/css/variables/variables-typography.less
@@ -1,15 +1,20 @@
 @font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-@heading-h1-text-font-size: @heading-h2-text-font-size * 1.1;
-@heading-h2-text-font-size: @heading-h3-text-font-size * 1.1;
-@heading-h3-text-font-size: @heading-h4-text-font-size * 1.1;
-@heading-h4-text-font-size: @heading-h5-text-font-size * 1.1;
-@heading-h5-text-font-size: @heading-h6-text-font-size * 1.1;
+@body-text-font-size: 12px;
+
+@heading-h1-text-font-size: @heading-h2-text-font-size * 1.05;
+@heading-h2-text-font-size: @heading-h3-text-font-size * 1.05;
+@heading-h3-text-font-size: @heading-h4-text-font-size * 1.05;
+@heading-h4-text-font-size: @heading-h5-text-font-size * 1.0;
+@heading-h5-text-font-size: @heading-h6-text-font-size * 1.0;
 @heading-h6-text-font-size: @body-text-font-size * 1.0;
 
 @heading-h1-text-line-height: @heading-h2-text-line-height * 1.1;
-@heading-h2-text-line-height: @heading-h3-text-line-height * 1.1;
-@heading-h3-text-line-height: @heading-h4-text-line-height * 1.1;
-@heading-h4-text-line-height: @heading-h5-text-line-height * 1.1;
-@heading-h5-text-line-height: @heading-h6-text-line-height * 1.1;
+@heading-h2-text-line-height: @heading-h3-text-line-height * 1.05;
+@heading-h3-text-line-height: @heading-h4-text-line-height * 1.0;
+@heading-h4-text-line-height: @heading-h5-text-line-height * 1.0;
+@heading-h5-text-line-height: @heading-h6-text-line-height * 1.0;
 @heading-h6-text-line-height: @body-text-line-height * 1.0;
+
+@heading-h1-text-font-weight: 400;
+@heading-h2-text-font-weight: 200;
