Add progress bar component

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -15,8 +15,9 @@
   }
 }
 
-.icon-checkmark {
-  fill: #49ba79;
+.icon-checkmark,
+.icon-circle-checkmark {
+  fill: @green;
 }
 
 .icon-download {
@@ -24,7 +25,7 @@
 }
 
 .icon-error {
-  fill: #ee2133;
+  fill: @red;
 }
 
 .icon-spinner {
@@ -35,6 +36,7 @@
   fill: #abadb4;
 }
 
-.icon-warning {
-  fill: #ee2133;
+.icon-warning,
+.icon-warning-small {
+  fill: @red;
 }
