--- a/src/css/index.less
+++ b/src/css/index.less
@@ -10,4 +10,5 @@
 
 @import "components/icons.less";
 @import "components/navigation-bar.less";
+@import "components/progress-bar.less";
 @import "components/tooltips.less";
