--- a/src/css/layout/section-header.less
+++ b/src/css/layout/section-header.less
@@ -1,8 +1,14 @@
+@section-header-icon-margin-bottom: @base-spacing-unit * 5/7;
+
 @section-header-margin-bottom: @base-spacing-unit * 1.5;
-@section-header-icon-margin-bottom: @base-spacing-unit * 2/3;
+@section-header-primary-margin-bottom: @base-spacing-unit * 2/7;
 
 .section-header {
   margin-bottom: @section-header-margin-bottom;
+}
+
+.section-header-primary {
+  margin-bottom: @section-header-primary-margin-bottom;
 }
 
 .section-header-icon {
