--- a/src/css/variables/variables-typography.less
+++ b/src/css/variables/variables-typography.less
@@ -1,9 +1,9 @@
 @font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-@body-text-font-size: 12px;
+@body-text-font-size: 12.8px;
 
-@heading-h1-text-font-size: @heading-h2-text-font-size * 1.05;
-@heading-h2-text-font-size: @heading-h3-text-font-size * 1.05;
+@heading-h1-text-font-size: @heading-h2-text-font-size * 1.0;
+@heading-h2-text-font-size: @heading-h3-text-font-size * 1.2;
 @heading-h3-text-font-size: @heading-h4-text-font-size * 1.05;
 @heading-h4-text-font-size: @heading-h5-text-font-size * 1.0;
 @heading-h5-text-font-size: @heading-h6-text-font-size * 1.0;
@@ -15,6 +15,8 @@
 @heading-h4-text-line-height: @heading-h5-text-line-height * 1.0;
 @heading-h5-text-line-height: @heading-h6-text-line-height * 1.0;
 @heading-h6-text-line-height: @body-text-line-height * 1.0;
+
+@heading-h2-text-color: #595E6C;
 
 @heading-h1-text-font-weight: 400;
 @heading-h2-text-font-weight: 200;
