Create tooltip component

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -9,5 +9,6 @@
 @import "layout/section-header.less";
 
 @import "components/icons.less";
+@import "components/tooltips.less";
 
 @import "modules/navigation-bar.less";
