--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,8 +1,11 @@
 @import "../../node_modules/canvas-ui-system/canvas.less";
+@import "../../node_modules/reactjs-components/lib/Modal/variables-modal.less";
+@import "../../node_modules/reactjs-components/lib/Modal/modal.less";
 
 @import "variables/variables-color.less";
 @import "variables/variables-layout.less";
 @import "variables/variables-typography.less";
+@import "variables/variables-modal.less";
 
 @import "layout/foundation.less";
 @import "layout/page.less";
@@ -12,3 +15,5 @@
 @import "components/navigation-bar.less";
 @import "components/progress-bar.less";
 @import "components/tooltips.less";
+@import "components/errors.less";
+@import "components/modal.less";
