--- a/src/css/components/errors.less
+++ b/src/css/components/errors.less
@@ -1,5 +1,5 @@
 .error-message-container {
-  border: 1px solid @gray;
+  border: 1px solid @grey;
   border-left: 5px solid @red;
   border-radius: 5px;
   margin-bottom: @base-spacing-unit * 0.5;
