--- a/src/css/components/navigation-bar.less
+++ b/src/css/components/navigation-bar.less
@@ -18,6 +18,11 @@
 @navigation-item-next-disabled-foreground: #3E4352;
 @navigation-item-next-disabled-chevron-fill: @navigation-item-next-disabled-foreground;
 
+
+
+
+
+
 .navigation-bar {
   background: @neutral;
   color: @white;
@@ -51,8 +56,8 @@
   }
 }
 
+.navigation-item-previous,
 .navigation-item-next {
-  background: @navigation-item-next-active-background;
   bottom: 0;
   color: @navigation-item-next-active-foreground;
   font-size: @navigation-item-next-font-size;
@@ -60,7 +65,6 @@
   padding-left: @navigation-item-next-padding-horizontal;
   padding-right: @navigation-item-next-padding-horizontal;
   position: absolute;
-  right: 0;
   text-transform: uppercase;
   top: 0;
 
@@ -79,6 +83,64 @@
 
   .icon {
     fill: @navigation-item-next-active-chevron-fill;
+  }
+}
+
+.navigation-item-next {
+  background: @navigation-item-next-active-background;
+  right: 0;
+
+  .icon {
     margin-left: @base-spacing-unit * 1/3;
   }
+}
+
+.navigation-item-previous {
+  left: 0;
+
+  .icon {
+    margin-right: @base-spacing-unit * 1/3;
+  }
+}
+
+.navigation-items,
+.navigation-item-desktop {
+  display: none;
+}
+
+
+
+
+
+
+& when (@screen-small-enabled) {
+
+  /* ---------------------------------------------------------------------------
+  ------------------------------------------------------------------------------
+
+  Screen Size: Small (@screen-small) and above
+
+  ------------------------------------------------------------------------------
+  --------------------------------------------------------------------------- */
+
+  @media (min-width: @screen-small) {
+
+    .navigation-items {
+      display: block;
+    }
+
+    .navigation-item-previous {
+      display: none;
+    }
+
+    .navigation-item-desktop {
+      display: inline-block;
+    }
+
+    .navigation-item-mobile {
+      display: none;
+    }
+
+  }
+
 }
