--- a/src/css/variables/variables-layout.less
+++ b/src/css/variables/variables-layout.less
@@ -1,1 +1,16 @@
 @fixed-bar-height: 60px;
+
+@screen-mini-enabled: true;
+@screen-mini: 480px;
+@screen-mini-max: (@screen-small - 1);
+
+@screen-small-enabled: true;
+@screen-small: 768px;
+@screen-small-max: (@screen-medium - 1);
+
+@screen-medium-enabled:true;
+@screen-medium: 992px;
+@screen-medium-max: (@screen-large - 1);
+
+@screen-large-enabled: true;
+@screen-large: 1400px;
