--- a/src/css/index.less
+++ b/src/css/index.less
@@ -11,9 +11,10 @@
 @import "layout/page.less";
 @import "layout/section-header.less";
 
+@import "components/errors.less";
 @import "components/icons.less";
+@import "components/modal.less";
 @import "components/navigation-bar.less";
+@import "components/password-strength.less";
 @import "components/progress-bar.less";
 @import "components/tooltips.less";
-@import "components/errors.less";
-@import "components/modal.less";
