--- a/src/css/variables/variables-color.less
+++ b/src/css/variables/variables-color.less
@@ -3,3 +3,9 @@
 @neutral: #232939;
 @grey: #CBCED1;
 @red: #F01A31;
+
+@password-strength-neutral: #e2e4e5;
+@password-strength-red: #ee2133;
+@password-strength-orange: @orange;
+@password-strength-yellow: @yellow;
+@password-strength-green: @green;
