Implement Setup form

--- a/src/css/components/errors.less
+++ b/src/css/components/errors.less
@@ -5,3 +5,16 @@
   margin-bottom: @base-spacing-unit * 0.5;
   padding: @base-spacing-unit * 0.5;
 }
+
+.form {
+
+  .row {
+
+    &:last-child {
+
+      .form-group {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
