--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,4 +1,5 @@
 @import "../../node_modules/canvas-ui/canvas.less";
+@import "../../node_modules/reactjs-components/lib/Form/form.less";
 @import "../../node_modules/reactjs-components/lib/Modal/variables-modal.less";
 @import "../../node_modules/reactjs-components/lib/Modal/modal.less";
 
@@ -9,9 +10,11 @@
 
 @import "layout/foundation.less";
 @import "layout/page.less";
+@import "layout/page-transitions.less";
 @import "layout/section-header.less";
 
 @import "components/errors.less";
+@import "components/forms.less";
 @import "components/icons.less";
 @import "components/modal.less";
 @import "components/navigation-bar.less";
