--- a/src/css/layout/page.less
+++ b/src/css/layout/page.less
@@ -1,6 +1,12 @@
-.page-wrapper {
+@page-padding-horizontal: @base-spacing-unit;
+@page-padding-vertical: @base-spacing-unit * 2;
+
+@page-section-margin-vertical: @base-spacing-unit * 2;
+
+.page {
   align-self: stretch;
   flex: 1;
+  padding: @page-padding-vertical @page-padding-horizontal;
 
   &.is-inverted {
     background: @neutral;
@@ -19,76 +25,21 @@
   width: 100%;
 }
 
-.page-section {
-  max-width: 350px;
+.page-content {
   width: 100%;
-}
 
-.page-transition-wrapper,
-.page-transition-container {
-  align-self: stretch;
-  flex: 1;
-}
-
-.page-transition-wrapper {
-  position: relative;
-}
-
-.page-transition-container {
-  height: auto;
-  left: 0;
-  min-height: 100%;
-  min-width: 100%;
-  position: absolute;
-  top: 0;
-  transform: translateX(0);
-  transition: transform 0.5s;
-}
-
-.page-transition-forward-enter {
-  transform: translateX(100%);
-
-  & + .page-transition-forward-enter {
-    transform: translateX(-100%);
+  .page-small & {
+    max-width: 350px;
   }
 
-  & + .page-transition-forward-enter-active {
-    transform: translateX(0);
+  .page-large & {
+    max-width: 730px;
   }
 }
 
-.page-transition-forward-enter-active {
-  transform: translateX(0);
-}
+.page-section {
 
-.page-transition-forward-leave {
-  transform: translateX(0);
-}
-
-.page-transition-forward-leave-active {
-  transform: translateX(-100%);
-}
-
-.page-transition-backward-enter {
-  transform: translateX(-100%);
-
-  & + .page-transition-backward-enter {
-    transform: translateX(100%);
+  & + .page-section {
+    margin-top: @page-section-margin-vertical;
   }
-
-  & + .page-transition-backward-enter-active {
-    transform: translateX(0);
-  }
-}
-
-.page-transition-backward-enter-active {
-  transform: translateX(0);
-}
-
-.page-transition-backward-leave {
-  transform: translateX(0);
-}
-
-.page-transition-backward-leave-active {
-  transform: translateX(100%);
 }
