Style the Begin page

--- a/src/css/layout/foundation.less
+++ b/src/css/layout/foundation.less
@@ -8,7 +8,7 @@ html {
 }
 
 .fixed-bar {
-  height: @fixed-bar-height;
+  height: @fixed-navigation-bar-height;
   left: 0;
   position: fixed;
   top: 0;
