--- a/src/css/layout/page.less
+++ b/src/css/layout/page.less
@@ -7,8 +7,16 @@
   }
 
   &.has-navigation-bar {
-    margin-top: @fixed-bar-height;
+    margin-top: @fixed-navigation-bar-height;
   }
+}
+
+.page-footer {
+  bottom: 0;
+  display: block;
+  left: 0;
+  position: absolute;
+  width: 100%;
 }
 
 .page-section {
