--- a/src/css/variables/variables-layout.less
+++ b/src/css/variables/variables-layout.less
@@ -1,4 +1,5 @@
-@fixed-bar-height: 60px;
+@fixed-navigation-bar-height: 60px;
+@fixed-footer-height: 60px;
 
 @screen-mini-enabled: true;
 @screen-mini: 480px;
