--- a/src/css/index.less
+++ b/src/css/index.less
@@ -15,6 +15,9 @@
 @import "components/icons.less";
 @import "components/modal.less";
 @import "components/navigation-bar.less";
+@import "components/page-footer.less";
 @import "components/password-strength.less";
 @import "components/progress-bar.less";
 @import "components/tooltips.less";
+
+@import "pages/begin.less";
