Temporarily fix hover state for nav bar items

--- a/src/css/components/navigation-bar.less
+++ b/src/css/components/navigation-bar.less
@@ -43,6 +43,11 @@
     border-radius: 0;
     height: auto;
   }
+
+  &:hover {
+    color: color-lighten(@navigation-item-inactive-foreground, 20%);
+    text-decoration: none;
+  }
 }
 
 .navigation-item-previous,
