Populate setup data

--- a/src/css/components/password-strength.less
+++ b/src/css/components/password-strength.less
@@ -1,8 +1,12 @@
 @password-strength-offset-right: 5px;
 
 .password-strength-wrapper {
-  display: inline-block;
+  display: block;
   position: relative;
+
+  input {
+    padding-right: @base-spacing-unit;
+  }
 
   .password-strength-indicator {
     pointer-events: none;
