--- a/src/css/index.less
+++ b/src/css/index.less
@@ -21,6 +21,7 @@
 @import "components/page-footer.less";
 @import "components/password-strength.less";
 @import "components/progress-bar.less";
+@import "components/stage-links.less";
 @import "components/tooltips.less";
 
 @import "pages/begin.less";
