Add transition to progress bar width

--- a/src/css/components/progress-bar.less
+++ b/src/css/components/progress-bar.less
@@ -80,6 +80,7 @@
   background: @progress-bar-fill-ongoing;
   height: 100%;
   position: absolute;
+  transition: width 1s;
   z-index: 1;
 
   .is-erroneous & {
