--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,4 +1,5 @@
 @import "../../node_modules/canvas-ui/canvas.less";
+@import (inline) "../../node_modules/react-gemini-scrollbar/node_modules/gemini-scrollbar/gemini-scrollbar.css";
 @import "../../node_modules/reactjs-components/lib/Form/form.less";
 @import "../../node_modules/reactjs-components/lib/Modal/variables-modal.less";
 @import "../../node_modules/reactjs-components/lib/Modal/modal.less";
