--- a/src/css/layout/page-transitions.less
+++ b/src/css/layout/page-transitions.less
@@ -5,18 +5,20 @@
 }
 
 .page-transition-wrapper {
+  height: 100%;
   position: relative;
 }
 
 .page-transition-container {
   height: auto;
   left: 0;
-  min-height: 100%;
-  min-width: 100%;
+  height: 100%;
+  opacity: 1;
   position: absolute;
   top: 0;
   transform: translateX(0);
   transition: transform 0.5s;
+  width: 100%;
 }
 
 .page-transition-forward-enter {
