--- a/src/css/layout/page-transitions.less
+++ b/src/css/layout/page-transitions.less
@@ -13,58 +13,43 @@
   height: auto;
   left: 0;
   height: 100%;
-  opacity: 1;
   position: absolute;
   top: 0;
-  transform: translateX(0);
-  transition: transform 0.5s;
   width: 100%;
 }
 
 .page-transition-forward-enter {
   transform: translateX(100%);
 
-  & + .page-transition-forward-enter {
-    transform: translateX(-100%);
-  }
-
-  & + .page-transition-forward-enter-active {
+  &.page-transition-forward-enter-active {
     transform: translateX(0);
+    transition: transform 0.5s;
   }
-}
-
-.page-transition-forward-enter-active {
-  transform: translateX(0);
-}
-
-.page-transition-forward-leave {
-  transform: translateX(0);
-}
-
-.page-transition-forward-leave-active {
-  transform: translateX(-100%);
 }
 
 .page-transition-backward-enter {
   transform: translateX(-100%);
 
-  & + .page-transition-backward-enter {
-    transform: translateX(100%);
-  }
-
-  & + .page-transition-backward-enter-active {
+  &.page-transition-backward-enter-active {
     transform: translateX(0);
+    transition: transform 0.5s;
   }
 }
 
-.page-transition-backward-enter-active {
+.page-transition-forward-leave {
   transform: translateX(0);
+
+  &.page-transition-forward-leave-active {
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+  }
 }
 
 .page-transition-backward-leave {
   transform: translateX(0);
-}
 
-.page-transition-backward-leave-active {
-  transform: translateX(100%);
+  &.page-transition-backward-leave-active {
+    transform: translateX(100%);
+    transition: transform 0.5s;
+  }
 }
