--- a/src/css/components/errors.less
+++ b/src/css/components/errors.less
@@ -4,6 +4,15 @@
   border-radius: 5px;
   margin-bottom: @base-spacing-unit * 0.5;
   padding: @base-spacing-unit * 0.5;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.error-label {
+  color: @red;
+  text-decoration: underline;
 }
 
 .form {
