--- a/src/css/components/navigation-bar.less
+++ b/src/css/components/navigation-bar.less
@@ -54,6 +54,7 @@
 .navigation-item-next {
   bottom: 0;
   color: @navigation-item-next-active-foreground;
+  cursor: pointer;
   font-size: @navigation-item-next-font-size;
   font-weight: 700;
   padding-left: @navigation-item-next-padding-horizontal;
@@ -69,6 +70,7 @@
   &.is-disabled {
     background: @navigation-item-next-disabled-background;
     color: @navigation-item-next-disabled-foreground;
+    cursor: default;
 
     .icon {
       fill: @navigation-item-next-disabled-chevron-fill;
