--- a/src/css/components/password-strength.less
+++ b/src/css/components/password-strength.less
@@ -1,11 +1,12 @@
-@password-strength-offset-right: 5px;
+@password-strength-offset-right: @base-spacing-unit * 1/2;
+@password-strength-input-padding-right: @base-spacing-unit * 1.5;
 
 .password-strength-wrapper {
   display: block;
   position: relative;
 
   input {
-    padding-right: @base-spacing-unit;
+    padding-right: @password-strength-input-padding-right;
   }
 
   .password-strength-indicator {
