--- a/src/css/index.less
+++ b/src/css/index.less
@@ -25,5 +25,6 @@
 @import "components/progress-bar.less";
 @import "components/stage-links.less";
 @import "components/tooltips.less";
+@import "components/upload-link.less";
 
 @import "pages/begin.less";
