--- a/src/css/components/progress-bar.less
+++ b/src/css/components/progress-bar.less
@@ -34,6 +34,7 @@
 .progress-bar-label {
   color: @progress-bar-label-foreground;
   flex: 1 1 auto;
+  vertical-align: middle;
 
   .is-erroneous & {
     color: @progress-bar-label-foreground-error;
