Add AlertPanel component, use for advanced config warning

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -21,6 +21,7 @@
 @import "components/modal.less";
 @import "components/navigation-bar.less";
 @import "components/page-footer.less";
+@import "components/panel.less";
 @import "components/password-strength.less";
 @import "components/progress-bar.less";
 @import "components/stage-links.less";
