--- a/src/css/index.less
+++ b/src/css/index.less
@@ -18,6 +18,7 @@
 @import "components/errors.less";
 @import "components/forms.less";
 @import "components/icons.less";
+@import "components/loading-indicator.less";
 @import "components/modal.less";
 @import "components/navigation-bar.less";
 @import "components/page-footer.less";
