--- a/src/css/variables/variables-typography.less
+++ b/src/css/variables/variables-typography.less
@@ -1,4 +1,4 @@
-@font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@path-fonts: "./fonts/";
 
 @body-text-font-size: 12.8px;
 
