Add icons to ErrorAlert component

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -24,6 +24,10 @@
   fill: @green;
 }
 
+.icon-close-small {
+  fill: #ee2133;
+}
+
 .icon-download {
   fill: #3f4453;
 }
@@ -92,6 +96,17 @@
 .icon-warning,
 .icon-warning-small {
   fill: @red;
+}
+
+.icon-warning-small-inverse {
+
+  .icon-warning-small-inverse-triangle {
+    fill: #ef4861;
+  }
+
+  .icon-warning-small-inverse-exclamation {
+    fill: @white;
+  }
 }
 
 // Sizes
