--- a/src/css/components/error-alert.less
+++ b/src/css/components/error-alert.less
@@ -2,7 +2,7 @@
 @error-alert-foreground: #F01A31;
 
 @error-alert-margin-bottom: @base-spacing-unit;
-@error-alert-padding-horizontal: @base-spacing-unit;
+@error-alert-padding-horizontal: @base-spacing-unit * 1.25;
 @error-alert-padding-vertical: @base-spacing-unit * 1/3;
 
 .error-alert {
@@ -16,14 +16,16 @@
 
   .icon {
     position: absolute;
-    top: @error-alert-padding-vertical;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
-  .icon-alert {
-    left: @error-alert-padding-horizontal;
+  .icon-warning-small-inverse {
+    left: @error-alert-padding-horizontal * 3/4;
   }
 
-  .icon-close {
-    right: @error-alert-padding-horizontal;
+  .icon-close-small {
+    cursor: pointer;
+    right: @error-alert-padding-horizontal * 3/4;
   }
 }
