--- a/src/css/index.less
+++ b/src/css/index.less
@@ -12,7 +12,7 @@
 @import "layout/foundation.less";
 @import "layout/page.less";
 @import "layout/page-transitions.less";
-@import "layout/section-header.less";
+@import "layout/section.less";
 
 @import "components/error-alert.less";
 @import "components/errors.less";
