Style Success page

--- a/src/css/layout/section.less
+++ b/src/css/layout/section.less
@@ -18,6 +18,13 @@
   }
 }
 
+.section-header-secondary {
+
+  &.successful-heading {
+    font-size: @heading-h2-text-font-size * 1.8;
+  }
+}
+
 .section-header-icon {
   margin-bottom: @section-header-icon-margin-bottom;
 
