Add transition for progress bar fill

--- a/src/css/components/progress-bar.less
+++ b/src/css/components/progress-bar.less
@@ -85,7 +85,7 @@
   background: @progress-bar-fill-ongoing;
   height: 100%;
   position: absolute;
-  transition: width 1s;
+  transition: color 1s, width 1s;
   z-index: 1;
 
   .is-erroneous & {
