--- a/src/css/components/navigation-bar.less
+++ b/src/css/components/navigation-bar.less
@@ -7,7 +7,7 @@
 @navigation-item-active-foreground: @white;
 @navigation-item-inactive-foreground: #80848F;
 
-@navigation-item-next-font-size: @navigation-item-font-size * 4/5;
+@navigation-item-next-font-size: @navigation-item-font-size;
 @navigation-item-next-padding-horizontal: @base-spacing-unit;
 
 @navigation-item-next-active-background: @green;
@@ -18,7 +18,7 @@
 @navigation-item-next-disabled-chevron-fill: @navigation-item-next-disabled-foreground;
 
 .navigation-bar {
-  background: @neutral;
+  background: @darkened-netural;
   color: @white;
 
   .icon {
@@ -52,7 +52,7 @@
   color: @navigation-item-next-active-foreground;
   cursor: pointer;
   font-size: @navigation-item-next-font-size;
-  font-weight: 700;
+  font-weight: 600;
   padding-left: @navigation-item-next-padding-horizontal;
   padding-right: @navigation-item-next-padding-horizontal;
   position: absolute;
