--- a/src/css/components/upload-link.less
+++ b/src/css/components/upload-link.less
@@ -1,4 +1,7 @@
+@upload-link-font-size: @body-text-font-size;
+
 .upload-link {
+  font-size: @upload-link-font-size;
 
   a {
     cursor: pointer;
