--- a/src/css/index.less
+++ b/src/css/index.less
@@ -10,6 +10,7 @@
 @import "variables/variables-modal.less";
 
 @import "layout/foundation.less";
+@import "layout/grid.less";
 @import "layout/page.less";
 @import "layout/page-transitions.less";
 @import "layout/section.less";
