--- a/src/css/variables/variables-color.less
+++ b/src/css/variables/variables-color.less
@@ -1,8 +1,5 @@
-@blue: #4A90E2;
-@green: #1FC365;
-@neutral: #232939;
+@darkened-netural: color-lighten(@neutral, -30);
 @grey: #CBCED1;
-@red: #F01A31;
 
 @password-strength-neutral: #e2e4e5;
 @password-strength-red: #ee2133;
