--- a/src/css/variables/variables-layout.less
+++ b/src/css/variables/variables-layout.less
@@ -1,6 +1,8 @@
 @fixed-navigation-bar-height: 60px;
 @fixed-footer-height: 60px;
 
+@grid-gutter-width: 32px;
+
 @screen-mini-enabled: true;
 @screen-mini: 480px;
 @screen-mini-max: (@screen-small - 1);
