--- a/src/css/components/modal.less
+++ b/src/css/components/modal.less
@@ -1,10 +1,10 @@
 .modal {
 
-  > :first-child {
+  & > :first-child {
     border-radius: @modal-border-radius;
   }
 
-  > :last-child {
+  & > :last-child {
     border-radius: @modal-border-radius;
   }
 
@@ -12,4 +12,11 @@
     border-radius: 50% !important;
   }
 
+  .modal-body {
+    padding: @base-spacing-unit * 1.4 @base-spacing-unit * 1.5;
+  }
+
+  .modal-footer {
+    padding: @base-spacing-unit;
+  }
 }
