--- a/src/css/layout/page.less
+++ b/src/css/layout/page.less
@@ -1,7 +1,7 @@
 @page-padding-horizontal: @base-spacing-unit;
 @page-padding-vertical: @base-spacing-unit * 2;
 
-@page-section-margin-vertical: @base-spacing-unit * 2;
+@page-section-margin-vertical: @base-spacing-unit * 1.5;
 
 .page {
   min-height: 100%;
@@ -10,7 +10,7 @@
   width: 100%;
 
   &.is-inverted {
-    background: @neutral;
+    background: @darkened-netural;
   }
 
   &.has-gemini {
