Change advanced configuration based on new design

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -20,7 +20,6 @@
 @import "components/fonts.less";
 @import "components/forms.less";
 @import "components/icons.less";
-@import "components/loading-indicator.less";
 @import "components/modal.less";
 @import "components/navigation-bar.less";
 @import "components/page-footer.less";
@@ -30,6 +29,7 @@
 @import "components/stage-links.less";
 @import "components/tooltips.less";
 @import "components/upload-link.less";
+@import "components/warnings.less";
 
 @import "pages/begin.less";
 @import "pages/success.less";
