--- a/src/css/components/forms.less
+++ b/src/css/components/forms.less
@@ -22,6 +22,10 @@
   }
 }
 
+.checkbox .form-element-checkbox input[type="checkbox"] + .form-element-checkbox-decoy + .form-element-checkbox-label {
+  margin-left: @base-spacing-unit * 1/4;
+}
+
 .form-row-element {
 
   &.form-row-input + .checkbox {
