Import overrides from reactjs-components in order to get container-scrollable class

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -3,6 +3,7 @@
 @import "../../node_modules/reactjs-components/lib/Form/form.less";
 @import "../../node_modules/reactjs-components/lib/Modal/variables-modal.less";
 @import "../../node_modules/reactjs-components/lib/Modal/modal.less";
+@import "../../node_modules/reactjs-components/lib/overrides/gemini-scrollbar.less";
 
 @import "variables/variables-color.less";
 @import "variables/variables-layout.less";
