Add IP Detect Script dropdown

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,5 +1,6 @@
 @import "../../node_modules/canvas-ui/canvas.less";
 @import (inline) "../../node_modules/react-gemini-scrollbar/node_modules/gemini-scrollbar/gemini-scrollbar.css";
+@import "../../node_modules/reactjs-components/lib/Dropdown/dropdown.less";
 @import "../../node_modules/reactjs-components/lib/Form/form.less";
 @import "../../node_modules/reactjs-components/lib/Modal/variables-modal.less";
 @import "../../node_modules/reactjs-components/lib/Modal/modal.less";
@@ -33,4 +34,5 @@
 @import "components/warnings.less";
 
 @import "pages/begin.less";
+@import "pages/setup.less";
 @import "pages/success.less";
