Allow users to go back to the Setup page from Pre-Flight

--- a/src/css/components/navigation-bar.less
+++ b/src/css/components/navigation-bar.less
@@ -43,6 +43,10 @@
   font-size: @navigation-item-font-size;
   padding: @navigation-item-padding-vertical @navigation-item-padding-horizontal;
 
+  &[href] {
+    cursor: pointer;
+  }
+
   &.is-active {
     color: @navigation-item-active-foreground;
   }
