Add server error alert

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -17,6 +17,7 @@
 @import "layout/page-transitions.less";
 @import "layout/section.less";
 
+@import "components/alert-panel.less";
 @import "components/error-alert.less";
 @import "components/errors.less";
 @import "components/fonts.less";
