Update logo & favicon

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -13,8 +13,12 @@
     opacity: 0.4;
   }
 
+  50% {
+    opacity: 0.15;
+  }
+
   100% {
-    opacity: 0.2;
+    opacity: 0.4;
   }
 }
 
@@ -51,7 +55,7 @@
 }
 
 .icon-loading-indicator {
-  animation: icon-loading-indicator-pulse 1s linear 0s infinite alternate;
+  animation: icon-loading-indicator-pulse 2s ease 0s infinite;
   fill: @white;
   height: 75px;
   width: 60px;
