Change 'resume' text and styling

--- a/src/css/layout/foundation.less
+++ b/src/css/layout/foundation.less
@@ -25,3 +25,12 @@ html {
 .form-element-checkbox-decoy svg {
   display: block;
 }
+
+a.text-color-white {
+  color: @white;
+
+  &:hover {
+    color: @white;
+    text-decoration: underline;
+  }
+}
