--- a/src/css/components/forms.less
+++ b/src/css/components/forms.less
@@ -39,3 +39,18 @@
     vertical-align: middle;
   }
 }
+
+.row {
+
+  &.row-inline-form-elements {
+
+    .form-row-element {
+      display: inline-block;
+      margin-right: @base-spacing-unit * 3/4;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
