All the updates

--- a/src/css/layout/section.less
+++ b/src/css/layout/section.less
@@ -23,6 +23,12 @@
   &.successful-heading {
     font-size: @heading-h2-text-font-size * 1.8;
   }
+
+  &.section-header-secondary-stage-state {
+    font-size: @body-text-font-size * 1.2;
+    font-weight: 300;
+    line-height: @body-text-line-height * 0.8;
+  }
 }
 
 .section-header-icon {
