--- a/src/css/index.less
+++ b/src/css/index.less
@@ -11,6 +11,8 @@
 @import "variables/variables-typography.less";
 @import "variables/variables-modal.less";
 
+@import "mixins/candy-stripe-mixin.less";
+
 @import "layout/foundation.less";
 @import "layout/grid.less";
 @import "layout/page.less";
@@ -18,6 +20,7 @@
 @import "layout/section.less";
 
 @import "components/alert-panel.less";
+@import "components/badge.less";
 @import "components/error-alert.less";
 @import "components/errors.less";
 @import "components/fonts.less";
@@ -25,6 +28,7 @@
 @import "components/icons.less";
 @import "components/modal.less";
 @import "components/navigation-bar.less";
+@import "components/nodes-list.less";
 @import "components/page-footer.less";
 @import "components/panel.less";
 @import "components/password-strength.less";
